--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,10 @@ activity-compose = "1.7.2"
 compose-bom = "2023.03.00"
 dagger-ver = "2.46.1"
 leakcanary-ver = "2.11"
+navigation-ver = "2.6.0"
+constraintlayout-ver = "2.1.4"
+appcompat-ver = "1.6.1"
+fragment-ver = "1.6.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -34,6 +38,11 @@ dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", vers
 dagger-hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "dagger-ver" }
 dagger-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-ver" }
 leakcanary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary-ver" }
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout-ver" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat-ver" }
+navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-ver" }
+navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ver" }
+fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ver" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
