--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ navigation-ver = "2.6.0"
 constraintlayout-ver = "2.1.4"
 appcompat-ver = "1.6.1"
 fragment-ver = "1.6.0"
+ktor-ver = "2.3.2"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -43,6 +44,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-ver" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ver" }
 fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ver" }
+ktor-network = { group = "io.ktor", name = "ktor-network", version.ref = "ktor-ver" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
