--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ constraintlayout-ver = "2.1.4"
 appcompat-ver = "1.6.1"
 fragment-ver = "1.6.0"
 ktor-ver = "2.3.2"
+json-serialization-ver = "1.5.1"
+datastore-ver = "1.0.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -45,6 +47,8 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-ver" }
 fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ver" }
 ktor-network = { group = "io.ktor", name = "ktor-network", version.ref = "ktor-ver" }
+json-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "json-serialization-ver" }
+datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore-ver" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -54,6 +58,7 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt-ver" }
 daggerPlugin = { id = "com.google.dagger.hilt.android", version.ref = "dagger-ver" }
 ktlintPlugin = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint-ver" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 [bundles]
 
